downward-example/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: downward-example
  namespace: default
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
    service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: "60"
spec:
  type: NodePort
  externalTrafficPolicy: Cluster
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30092
  selector:
    app: downward-example
